k8s/project6/pod-ci-sbom-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docutrust-ci-sbom-test
spec:
  containers:
    - name: docutrust
      image: ghcr.io/koceeeneh/docutrust@sha256:c9167a9d3425a8f19884ca5b696d228ce6afc65dcd688a18d4573f85eaf09017
