k8s/project6/kyverno-identity-negative-test.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-wrong-workflow-identity
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  rules:
    - name: expect-ci-yml-identity
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "ghcr.io/koceeeneh/docutrust*"
          attestations:
            - predicateType: https://spdx.dev/Document
              attestors:
                - entries:
                    - keyless:
                        subject: "https://github.com/KoceeEneh/docutrust/.github/workflows/ci.yml@refs/heads/main"
                        issuer: "https://token.actions.githubusercontent.com"
                        rekor:
                          url: https://rekor.sigstore.dev
