k8s/project6/kyverno-verify-docutrust-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-docutrust-signature
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  rules:
    - name: verify-docutrust-image-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "ghcr.io/koceeeneh/docutrust*"
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/KoceeEneh/docutrust/.github/workflows/provenance.yml@refs/heads/main"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: https://rekor.sigstore.dev
